# surviving-json-jungle

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run_duckdb.py  run_polars.py
.github/workflows/: validate.yml
data/: sample.jsonl
