[project]
name = "surviving-json-jungle"
version = "0.1.0"
description = "Demo code for JSON transformations with Polars and DuckDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.1.3",
    "polars==1.20.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "pre-commit>=4.0.1", "pytest>=8.3.4", "ruff>=0.9.2"]
